ファビコン設置

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <h4>未来の名古屋が<br> あなたを待っている！
                     </h4>
                     <p>不動産建物管理事業を安定的に行いながら、
-                      同時に不動産賃貸などいわゆる「安定的収益が期待できる事業」に注力し、
+                      不動産賃貸などいわゆる「安定的収益が期待できる事業」に注力し、
                       事業収益力の強化を図ります。
                       さらにリフォーム業やメンテナンス業にも注力し収益力の向上を図ります。
                       これらを基本戦略として更なる安定と成長を目指しています。
@@ -272,8 +272,9 @@
                 <div class="recruit_link_photo" data-pararax01-opacity02="0.0"><img alt="" src="img/top_recruit_ph02.jpg"></div>
                 <div class="recruit_link_text" data-pararax01-opacity03="0.2">
                     <h4><img alt="YAMADAGUMI RECRUIT" src="img/recruit_link_ttl.png"></h4>
-                    <p>テキストテキスト<br class="sp_only">テキストテキスト
-                        <br>テキストテキスト
+                    <p>未来の「アタリマエ」を創り出すために。<br class="pc_only">
+                      <br class="sp_only">未来の「シアワセ」を届けるために。
+                        <br>未来の地元に全てに関わってゆくことって<br class="sp_only"><br class="pc_only">楽しいと思いませんか？
                     </p>
                     <div class="more_btn_white">
                         <a href="recruit/index.html">採用情報</a>
@@ -282,67 +283,7 @@
             </div>
             <!--/採用情報リンク-->
         </section>
-        <!--/採用情報-->
-        <!--ニュース&ブログ-->
-        <!-- <section id="news" data-pararax01>
-            <div class="container1100" data-pararax01-opacity02="0.0"> -->
-                <!--タイトル-->
-                <!-- <div class="news_ttl_box">
-                    <div class="section_ttl">
-                        <h3>ニュース&amp;ブログ<span>News <em>&amp;</em> Blog</span></h3>
-                    </div>
-                    <div class="more_btn pc_only">
-                        <a href="news/index.html">ニュース&amp;ブログ一覧</a>
-                    </div>
-                </div> -->
-                <!--/タイトル-->
-                <!--一覧-->
-                <!-- <div class="news_list_wrapper">
-                    <div class="news_list_box">
-                        <a href="news/csr-2020-10-19/index.html">
-                            <div class="news_list_photo"><img class="ofi" alt="" src="uploads/2020/10/20201014_-e1603159536812-1024x768.jpg"></div>
-                            <div class="news_list_text">
-                                <span>2020.10.19 ｜  社会貢献活動 </span>
-                                <h4>【アダプト・プログラム】を実施しました。</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="news_list_box">
-                        <a href="news/blog-2020-10-12/index.html">
-                            <div class="news_list_photo"><img class="ofi" alt="" src="uploads/2020/10/IMG_0858-1024x768.jpg"></div>
-                            <div class="news_list_text">
-                                <span>2020.10.12 ｜  ブログ </span>
-                                <h4>【岩見沢農業高校生】インターンシップを開催しました</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="news_list_box">
-                        <a href="news/blog-2020-10-09/index.html">
-                            <div class="news_list_photo"><img class="ofi" alt="" src="uploads/2020/10/DSC01-1024x768.jpg"></div>
-                            <div class="news_list_text">
-                                <span>2020.10.09 ｜  ニュース </span>
-                                <h4>初代【北海道開発局 i-con奨励賞】を受賞しました</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="news_list_box">
-                        <a href="news/blog-2020-10-02/index.html">
-                            <div class="news_list_photo"><img class="ofi" alt="" src="uploads/2020/10/173baa3ef568976293e8742a074e2dfb.jpg"></div>
-                            <div class="news_list_text">
-                                <span>2020.10.02 ｜  ニュース </span>
-                                <h4>NEXCO東日本様より緊急対策工事に対して感謝状を頂きました</h4>
-                            </div>
-                        </a>
-                    </div>
-                </div> -->
-                <!--/一覧-->
-                <!-- <div class="more_btn sp_only">
-                    <a href="news/index.html">ニュース&amp;ブログ一覧</a>
-                </div>
-            </div>
-        </section> -->
-        <!--/ニュース&ブログ-->
-    </main>
+            </main>
 
     <!--フッター-->
     <footer>
@@ -368,10 +309,8 @@
                     <li><a href="company/index.html">オーナー様へ</a></li>
                     <li><a href="recruit/index.html">採用情報</a></li>
                     <li><a href="contact/index.html">お問い合わせ</a></li>
-                    <!-- <li><a href="news/index.html">ニュース＆ブログ</a></li> -->
                 </ul>
                 <ul>
-                    <!-- <li><a href="contact/index.html">お問い合わせ</a></li> -->
                     <li><a href="privacy_policy/index.html">個人情報保護方針</a></li>
                 </ul>
             </div>
