--- a/works/index.html
+++ b/works/index.html
@@ -6,15 +6,6 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156653780-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-156653780-1');
-</script>
 <title>オーナー様へ</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/worksf606.css?update=20200217144717" rel="stylesheet">
@@ -26,8 +17,8 @@
 <meta name="robots" content="">
 <meta property="og:title" content="施工実績 | 株式会社山田組">
 <meta property="og:description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。">
-<meta property="og:url" content="https://www.yamada-gumi.co.jp/works/">
-<meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
+<meta property="og:url" content="https://bonds-property.co.jp/">
+<meta property="og:image" content="common/img/og.png">
 <link href="../favicon.ico" rel="icon">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width,viewport-fit=cover">
@@ -69,9 +60,7 @@
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i&amp;display=swap" rel="stylesheet">
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <link rel="stylesheet" href="../common/css/common.css">
