--- a/contact/index9e3a.html
+++ b/contact/index9e3a.html
@@ -288,42 +288,38 @@
 <!--/パンくず-->
 
 	</main>
+  <!--フッター-->
+  <footer>
+  <div class="container1100">
 
-<!--フッター-->
-<footer>
-<div class="container1100">
+  <div class="footer_left">
+  <h2><a href="../index.html"><img src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h2>
+  <address>
+  <span>〒460-0011</span>
+  愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
+  </address>
+  </div>
 
-<div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
-<address>
-<span>〒060-0042</span>
-北海道札幌市中央区大通西14丁目1番地 <br data-sc-sp>山田ビル
-</address>
-</div>
+  <div class="footer_right">
+  <ul>
+  <li><a href="../index.html">TOP ページ</a></li>
+  <li><a href="../company/index.html">会社概要</a></li>
+  <li><a href="../service/index.html">事業内容</a></li>
+  </ul>
+  <ul>
+  <li><a href="../works/index.html">オーナー様へ</a></li>
+  <li><a href="../recruit/index.html">採用情報</a></li>
+  <li><a href="index.html">お問い合わせ</a></li>
+  </ul>
+  <ul>
+  <li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
+  </ul>
+  </div>
 
-<div class="footer_right">
-<ul>
-<li><a href="../index.html">TOP ページ</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
-</ul>
-<ul>
-<li><a href="../company/index.html">会社案内</a></li>
-<li><a href="../recruit/index.html">採用情報</a></li>
-<li><a href="../news/index.html">ニュース＆ブログ</a></li>
-</ul>
-<ul>
-<li><a href="index.html">お問い合わせ</a></li>
-<li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
-</ul>
-</div>
+  <p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
-<p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
-
-</div>
-
-</footer>
-<!--/フッター-->
+  </div>
+  <!--/フッター-->
 
 <!--先頭に戻る-->
 <div id="back_to_top">
