--- a/works/common/img/header_logo.html
+++ b/works/common/img/header_logo.html
@@ -2,26 +2,18 @@
 <html lang="ja" class=" not-safari not-chrome not-ie addPrintMessage">
 <head>
 <meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156653780-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-156653780-1');
 </script>
 <title></title>
 <link href="/common/css/common.css?update=20201021125020" rel="stylesheet">
 <link href="/common/css/common_kasou.css?update=20200217145454" rel="stylesheet">
 <link href="/s_css/form.css?update=20200217144715" rel="stylesheet">
-<link rel="canonical" href="https://www.yamada-gumi.co.jp">
+<link rel="canonical" href="https://bonds-property.co.jp/">
 <meta name="description" content="">
 <meta name="robots" content="">
 <meta property="og:title" content="ページが見つかりません">
 <meta property="og:description" content="">
-<meta property="og:url" content="https://www.yamada-gumi.co.jp">
-<meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
+<meta property="og:url" content="https://bonds-property.co.jp/">
+<meta property="og:image" content="common/img/og.png">
 <link href="/favicon.ico" rel="icon">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width,viewport-fit=cover">
