TOPページ　PC版一度提出

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <!--山田組の仕事-->
             <div class="container1300 service_works_wrapper" data-pararax01>
                 <div class="service_works_text" data-pararax01-opacity03="0.2">
-                    <h4>私たちにできること</h4>
+                    <h4>弊社が選ばれる理由</h4>
                     <p>オーナー様にとって管理会社は大事なパートナーであり、管理会社選びは不動産経営の成功を大きく左右すると考えております。
                       弊社では、失敗しないアパート・マンション経営を全面的にバックアップします。
                       名古屋ならではの問題点を熟知し、解決のための弊社独自の管理システムを採用しております。
@@ -265,16 +265,15 @@
                       そんな未来図を描いている当社は、共に活躍する仲間を求めています。
                     </p>
                 </div>
-                <div class="recruit_photo" data-pararax01-opacity03="0.2"><img alt="" src="img/top_recruit_ph01.png"></div>
+                <div class="recruit_photo" data-pararax01-opacity03="0.2"><img alt="" src="img/top_recruet_pc.png"></div>
             </div>
             <!--採用情報リンク-->
             <div class="container1100 recruit_link_wrapper" data-pararax01>
-                <div class="recruit_link_photo" data-pararax01-opacity02="0.0"><img alt="" src="img/top_recruit_ph02.jpg"></div>
+                <div class="recruit_link_photo" data-pararax01-opacity02="0.0"><img alt="" src="img/top_recruit_ph03.jpg"></div>
                 <div class="recruit_link_text" data-pararax01-opacity03="0.2">
-                    <h4><img alt="YAMADAGUMI RECRUIT" src="img/recruit_link_ttl.png"></h4>
-                    <p>未来の「アタリマエ」を創り出すために。<br class="pc_only">
-                      <br class="sp_only">未来の「シアワセ」を届けるために。
-                        <br>未来の地元に全てに関わってゆくことって<br class="sp_only"><br class="pc_only">楽しいと思いませんか？
+                    <h4><img alt="YAMADAGUMI RECRUIT" src="img/recruit_link_ttl_pc.png"></h4>
+                    <p>未来の「シアワセ」を届けるため。<br class="sp_only"><br class="pc_only">
+                        未来の地域に関わってゆくことって<br class="sp_only"><br class="pc_only">素晴らしいと思いませんか？
                     </p>
                     <div class="more_btn_white">
                         <a href="recruit/index.html">採用情報</a>
