会社概要ページ修正

--- a/company/index.html
+++ b/company/index.html
@@ -211,7 +211,7 @@
 			<ul class="list">
 				<li class="item" data-pararax01-opacity05="0.0">
 					<h5>
-						<img src="../img/company/link_service.jpg" alt="事業内容" class="pc_only">
+						<img src="../img/company/1772929_l.jpg" alt="事業内容" class="pc_only">
 						<img src="../img/company/link_service_sp.jpg" alt="事業内容" class="sp_only">
 					</h5>
 					<div class="content">
