採用ページ１次提出

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                 <div class="service_works_text" data-pararax01-opacity03="0.2">
                     <h4>弊社が選ばれる理由</h4>
                     <p>オーナー様にとって管理会社は大事なパートナーであり、管理会社選びは不動産経営の成功を大きく左右すると考えております。
-                      弊社では、失敗しないアパート・マンション経営を全面的にバックアップします。
-                      名古屋ならではの問題点を熟知し、解決のための弊社独自の管理システムを採用しております。
-                      オーナー様、入居者様の立場からマンション管理を常に徹底して心がけ、満足のいくサービスを提供してまいります。
+                      <br class="pc_only">弊社では、失敗しないアパート・マンション経営を全面的にバックアップします。
+                      <br class="pc_only">名古屋ならではの問題点を熟知し、解決のための弊社独自の管理システムを採用しており、
+                      オーナー様、入居者様の立場からマンション管理を徹底し、満足のいくサービスを提供してまいります。
                 </div>
                 <div class="service_works_photo" data-pararax01-opacity02="0.4"><img alt="" src="img/top_service_works_ph02.jpg"></div>
             </div>
