ボタンホバー時の色繊維 フッター訂正 アイコン透過

--- a/contact/index.html
+++ b/contact/index.html
@@ -129,7 +129,10 @@
 
 								<p class="cap">〈 選択中のお問い合わせ種別 〉</p>
 
-								<div class="itemWrap radioWrap radio_addressBox"><span class="a" data-tab="tab-0"><label for="radio_address0"><input class="radio" data-tab="tab-0" type="radio" name="radio_address"  value="一般お問い合わせ" id="radio_address0"><span>一般お問い合わせ</span></label></span><span class="a" data-tab="tab-1"><label for="radio_address1"><input class="radio" data-tab="tab-1" type="radio" name="radio_address"  value="新卒採用エントリー" id="radio_address1"><span>新卒採用エントリー</span></label></span><span class="a" data-tab="tab-2"><label for="radio_address2"><input class="radio" data-tab="tab-2" type="radio" name="radio_address"  value="中途採用エントリー" id="radio_address2"><span>中途採用エントリー</span></label><span class="point_while"></span></span></div>								<ul class="shubetsuChangeSP" data-sc-sp>
+								<div class="itemWrap radioWrap radio_addressBox"><span class="a" data-tab="tab-0"><label for="radio_address0"><input class="radio" data-tab="tab-0" type="radio" name="radio_address"  value="一般お問い合わせ" id="radio_address0"><span>一般お問い合わせ</span></label></span>
+									<span class="a" data-tab="tab-1"><label for="radio_address1"><input class="radio" data-tab="tab-1" type="radio" name="radio_address"  value="新卒採用エントリー" id="radio_address1"><span>新卒採用エントリー</span></label></span>
+									<span class="a" data-tab="tab-2"><label for="radio_address2"><input class="radio" data-tab="tab-2" type="radio" name="radio_address"  value="中途採用エントリー" id="radio_address2"><span>中途採用エントリー</span></label><span class="point_while"></span></span></div>
+								<ul class="shubetsuChangeSP" data-sc-sp>
 									<li class="one"><span>一般お問い合わせ</span></li>
 									<li class="one"><span>新卒採用エントリー</span></li>
 									<li class="one"><span>中途採用エントリー</span></li>
@@ -299,9 +302,6 @@
 <li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
 <li><a href="index.html">お問い合わせ</a></li>
-</ul>
-<ul>
-<li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
 </ul>
 </div>
 
