--- a/recruit/index.html
+++ b/recruit/index.html
@@ -157,11 +157,11 @@
 	</div>
 </section>
 
-<section class="recruit_benefits">
+<!-- <section class="recruit_benefits">
 	<div class="container1300" data-pararax01>
 		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">福利厚生</h3>
 		<p class="f-playfair" data-pararax01-opacity05="0.2">Benefits</p>
-		<p data-pararax01-opacity05="0.4">現場での「週休２日」制度など働き方改革を積極的に進めて建設業界のこれまでのイメージを払拭し、<br class="pc_br">社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。</p>
+		<p data-pararax01-opacity05="0.4">社員一人ひとりの人格を尊重するとともに、あらゆる差別やハラスメントを排除し、安全で働きやすい職場環境を確保して<br class="pc_br">社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。</p>
 		<ul>
 			<li data-pararax01-opacity05="0.6">
 				<div>
@@ -176,24 +176,23 @@
 					<h4 class="f-yumincho">特別休暇制度</h4>
 				</div>
 				<p>年末年始休暇や有給休暇とは別に現場勤務終了時に特別休暇を取得できるなど働く意欲に応える制度づくりに努めています。</p>
-			</li>
-			<li data-pararax01-opacity05="1.0">
+			</li> -->
+			<!-- <li data-pararax01-opacity05="1.0">
 				<div>
 					<img src="../img/recruit/recruit_benefits_icon03_coppy.png" alt="">
 					<h4 class="f-yumincho">社宅・独身寮完備</h4>
 				</div>
 				<p>希望者は江別市大麻の社宅（3LDK）、独身寮（ワンルーム）に入居できます。住宅手当・燃料手当も充実しています。</p>
-			</li>
-		</ul>
+			</li> -->
+		<!-- </ul>
 	</div>
-</section>
+</section> -->
 <section class="recruit_entry" data-pararax01>
 	<img class="sp" src="../img/recruit/recruit_bg.jpg" alt="" data-pararax01-opacity05="0.0">
 	<div class="box_center" data-pararax01-opacity05="0.0">
 		<h3 class="section_ttl f-yumincho">エントリー<br><span class="f-playfair">Entry</span></h3>
-		<p class="f-yumincho">ものづくりへの熱い想いを歓迎します！</p>
-		<div class="more_btn_white"><a href="../contact/index7157.html?radio_address_trigger1">新卒エントリーはこちら</a></div>
-		<div class="more_btn_white"><a href="../contact/index9e3a.html?radio_address_trigger2">中途エントリーはこちら</a></div>
+		<p class="f-yumincho">名古屋への熱い想いを歓迎します！</p>
+		<div class="more_btn_white"><a href="#">エントリーはこちら</a></div>
 	</div>
 </section>
 
@@ -236,9 +235,6 @@
   <li><a href="../works/index.html">オーナー様へ</a></li>
   <li><a href="index.html">採用情報</a></li>
   <li><a href="../contact/index.html">お問い合わせ</a></li>
-</ul>
-<ul>
-<li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
 </ul>
 </div>
 
