レスポンシブ対応下記 ・TOPページ ・会社概要 ・採用情報 ・お問い合わせ

--- a/company/index.html
+++ b/company/index.html
@@ -105,7 +105,7 @@
 	<div data-pararax01>
 		<div class="container1300 company_intro_text">
 			<h4 class="f-yumincho" data-pararax01-opacity05="0.0">
-				お客様のご要望にお応えするスピードと行動力、<br class="pc_only"><br class="sp_only">そして何より誠実さに更なる磨きをかけ、<br class="pc_only"><br class="sp_only">地域の皆様に貢献できるよう、<br> これからも地域社会の<br class="sp_only">成長に貢献し、<br class="pc_only">地域社会とともに<br class="sp_only">繁栄することを目指して<br class="sp_only">活動してまいります。
+				ご要望にお応えするスピードと行動力、<br class="pc_only"><br class="sp_only">そして何より誠実さに更なる磨きをかけ、<br class="pc_only"><br class="sp_only">地域の皆様に貢献できるよう、<br> これからも地域社会の<br class="sp_only">成長に貢献し、<br class="pc_only">地域社会とともに<br class="sp_only">繁栄することを目指して<br class="sp_only">活動してまいります。
       </h4>
 		</div>
 
@@ -212,7 +212,7 @@
 				<li class="item" data-pararax01-opacity05="0.0">
 					<h5>
 						<img src="../img/company/1772929_l.jpg" alt="事業内容" class="pc_only">
-						<img src="../img/company/link_service_sp.jpg" alt="事業内容" class="sp_only">
+						<img src="../img/company/Bp_link_sevice_sp.jpg" alt="事業内容" class="sp_only">
 					</h5>
 					<div class="content">
 						<h3 class="ttl f-yumincho">事業内容<span class="f-playfair">Service</span></h3>
@@ -224,7 +224,7 @@
 				<li class="item" data-pararax01-opacity05="0.2">
 					<h5>
 						<img src="../img/company/pexels-andrea-piacquadio-3760069.jpg" alt="採用情報" class="pc_only">
-						<img src="../img/company/link_recruit_sp.jpg" alt="採用情報" class="sp_only">
+						<img src="../img/company/Bp_link_recruit.jpg" alt="採用情報" class="sp_only">
 					</h5>
 					<div class="content">
 						<h3 class="ttl f-yumincho">採用情報<span class="f-playfair">Recruit</span></h3>
