--- a/recruit/index.html
+++ b/recruit/index.html
@@ -188,7 +188,7 @@
 	</div>
 </section> -->
 <section class="recruit_entry" data-pararax01>
-	<img class="sp" src="../img/recruit/recruit_bg.jpg" alt="" data-pararax01-opacity05="0.0">
+	<img class="sp" src="../img/recruit/BP_recruit_bg.jpg" alt="" data-pararax01-opacity05="0.0">
 	<div class="box_center" data-pararax01-opacity05="0.0">
 		<h3 class="section_ttl f-yumincho">エントリー<br><span class="f-playfair">Entry</span></h3>
 		<p class="f-yumincho">名古屋への熱い想いを歓迎します！</p>
