--- a/service/index.html
+++ b/service/index.html
@@ -220,8 +220,8 @@
 		<ul class="list">
 			<li class="item" data-pararax01-opacity05="0.0">
 				<h5>
-					<img src="../img/service/link_about.jpg" alt="山田組について" class="pc_only">
-					<img src="../img/service/link_about_sp.jpg" alt="山田組について" class="sp_only">
+					<img src="../img/service/1772929_l.jpg"  class="pc_only">
+					<img src="../img/service/Bp_link_sevice_sp.jpg" class="sp_only">
 				</h5>
 				<div class="content">
 					<h3 class="ttl f-yumincho">会社案内<span class="f-playfair">Company</span></h3>
@@ -232,8 +232,8 @@
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
 				<h5>
-					<img src="../img/service/link_recruit.jpg" alt="採用情報" class="pc_only">
-					<img src="../img/service/link_recruit_sp.jpg" alt="採用情報" class="sp_only">
+					<img src="../img/service/pexels-andrea-piacquadio-3760069.jpg" alt="採用情報" class="pc_only">
+					<img src="../img/service/Bp_link_recruit.jpg" alt="採用情報" class="sp_only">
 				</h5>
 				<div class="content">
 					<h3 class="ttl f-yumincho">採用情報<span class="f-playfair">Recruit</span></h3>
