事業内容ページ作成

--- a/service/index.html
+++ b/service/index.html
@@ -112,7 +112,8 @@
 <div class="container1300 service_intro">
 	<div class="in" data-pararax01>
 		<div  data-pararax01-opacity05="0.0">
-			<h3 class="f-yumincho">テキストテキストテキスト<br>テキストテキストテキスト<br class="sp_only">テキストテキストテキスト</h3>
+			<h3 class="f-yumincho">専門スタッフがオーナー様に<br>代わって煩雑な管理業務を
+責任持って代行し、<br>安定した収入と資産価値の向上に努めてまいります。</h3>
 		</div>
 		<ul class="introList">
 			<li class="item" data-pararax01-opacity05="0.2">
@@ -125,7 +126,8 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">賃貸管理</h4>
-					<p>テキストテキストテキストテキストテキスト</p>
+					<p>家賃集金・入退去時フォローなどの家主業務代行から、
+						建物のメンテナンスに至るまで、オーナー様の賃貸不動産運用を全面的にサポート致します。</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
@@ -138,7 +140,9 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">建物管理</h4>
-					<p>テキストテキストテキストテキストテキスト</p>
+					<p>オーナーさまの大切な資産を維持するのはもとより、「住んでよかった」、「住み続けたい」という入居者さまの「満足度」にも直結します。<br>
+ただ「器」として住まいを提供するものではなく、安全や安心、心地よさも提供するものであるという視点で、管理を行っています。
+</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.6">
@@ -151,7 +155,9 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">メンテナンス</h4>
-					<p>テキストテキストテキストテキストテキスト</p>
+					<p>建物の維持管理、美観の保持、入居促進や入居者の満足度を高めることにつながります。<br>
+						弊社では自社のメンテナンススタッフによる清掃体制を整えていますので、充実した内容ながらも価格を抑えたお得なメンテナンスプランをご提案しています。
+</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.8">
@@ -164,7 +170,7 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">リフォーム</h4>
-					<p>テキストテキストテキストテキストテキスト</p>
+					<p>しっかりした現状認識と、夢を現実のものにするための技術力が不可欠なのです。弊社はそうした総合的な力を身につけた、リフォームの達人、私たちはそのように自負し、さらに精進を重ねています。</p>
 				</div>
 			</li>
 		</ul>
