--- a/recruit/index.html
+++ b/recruit/index.html
@@ -115,15 +115,15 @@
 			</div>
 			<div>
 				<dt>募集職種</dt>
-				<dd>土木施工管理技士（現場施工）<br>官庁から受注した請負土木工事完成までの一切の業務で、主に現場の管理となります。<br>（測量、CAD図面、写真整理、施工管理、安全管理、品質管理、工程管理など）</dd>
+				<dd>テキストテキスト<br>テキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキスト</dd>
 			</div>
 			<div>
 				<dt>応募資格</dt>
-				<dd>高卒以上</dd>
+				<dd>テキスト</dd>
 			</div>
 			<div>
 				<dt>勤務予定地</dt>
-				<dd>北海道札幌市　ただし、道内一円の作業現場への出張有り（転勤の可能性無し）</dd>
+				<dd>テキストテキストテキストテキスト</dd>
 			</div>
 			<div>
 				<dt>給与</dt>
@@ -157,36 +157,6 @@
 	</div>
 </section>
 
-<!-- <section class="recruit_benefits">
-	<div class="container1300" data-pararax01>
-		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">福利厚生</h3>
-		<p class="f-playfair" data-pararax01-opacity05="0.2">Benefits</p>
-		<p data-pararax01-opacity05="0.4">社員一人ひとりの人格を尊重するとともに、あらゆる差別やハラスメントを排除し、安全で働きやすい職場環境を確保して<br class="pc_br">社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。</p>
-		<ul>
-			<li data-pararax01-opacity05="0.6">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon01_coppy.png" alt="">
-					<h4 class="f-yumincho">各種社会保険・退職金制度</h4>
-				</div>
-				<p>社会保険を完備するとともに必要な資格を有する場合の「技能手当」なども支給。社内退職金制度も導入しています。</p>
-			</li>
-			<li data-pararax01-opacity05="0.8">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon02_coppy.png" alt="">
-					<h4 class="f-yumincho">特別休暇制度</h4>
-				</div>
-				<p>年末年始休暇や有給休暇とは別に現場勤務終了時に特別休暇を取得できるなど働く意欲に応える制度づくりに努めています。</p>
-			</li> -->
-			<!-- <li data-pararax01-opacity05="1.0">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon03_coppy.png" alt="">
-					<h4 class="f-yumincho">社宅・独身寮完備</h4>
-				</div>
-				<p>希望者は江別市大麻の社宅（3LDK）、独身寮（ワンルーム）に入居できます。住宅手当・燃料手当も充実しています。</p>
-			</li> -->
-		<!-- </ul>
-	</div>
-</section> -->
 <section class="recruit_entry" data-pararax01>
 	<img class="sp" src="../img/recruit/BP_recruit_bg.jpg" alt="" data-pararax01-opacity05="0.0">
 	<div class="box_center" data-pararax01-opacity05="0.0">
