事業内容ページ作成

--- a/service/index.html
+++ b/service/index.html
@@ -126,7 +126,7 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">賃貸管理</h4>
-					<p>家賃集金・入退去時フォローなどの家主業務代行から、
+					<p>弊社は貸主様と借主様との関係性をより良く変えていきます。全ては、この地域をより良く、より幸せにするために。<br>家賃集金・入退去時フォローなどの家主業務代行から、
 						建物のメンテナンスに至るまで、オーナー様の賃貸不動産運用を全面的にサポート致します。</p>
 				</div>
 			</li>
@@ -170,7 +170,9 @@
 				</div>
 				<div class="box">
 					<h4 class="f-yumincho">リフォーム</h4>
-					<p>しっかりした現状認識と、夢を現実のものにするための技術力が不可欠なのです。弊社はそうした総合的な力を身につけた、リフォームの達人、私たちはそのように自負し、さらに精進を重ねています。</p>
+					<p>しっかりした現状認識と、夢を現実のものにするための技術力が不可欠なのです。
+						弊社はそうした総合的な力を身につけた、リフォームの達人、私たちはそのように自負し、
+						さらに精進を重ねています。</p>
 				</div>
 			</li>
 		</ul>
@@ -182,25 +184,103 @@
 	<div class="container1300">
 		<div class="box" data-pararax01-opacity02="0.2">
 			<div class="box_text">
-				<p class="txt">テキストテキストテキストテキストテキストテキストテキスト</p>
-				<p class="comment">テキストテキストテキストテキスト</p>
+				<h2 class="txt">不動産賃貸管理<br><span class="f-playfair">Property Management</span></h2>
+				<p class="comment">	万全の管理体制を築いてこそ、入居率も安定し、良質な資産として維持できると弊社では考えております。<br>
+														大切な賃貸を、快適な住まいとして、優れた資産として管理し、残していくため
+														弊社のみが知る地域ならではの入居率や人口動態などを把握しているからこそ出来るサポートがございます<br>
+														</p>
 			</div>
 		</div>
 		<ul class="listJob" data-pararax01>
 			<li class="item" data-pararax01-opacity05="0.0">
-				<p class="ph"><img src="../img/service/job_img01.jpg" alt="プロジェクト管理・進行"></p>
-				<h4 class="ttl f-yumincho">テキストテキスト</h4>
-				<p class="txt">テキストテキストテキストテキストテキスト</p>
+				<p class="ph"><img src="../img/service/job_img01.jpg" alt="ポイント１"></p>
+				<h4 class="ttl f-yumincho">幅広く募集を行うことで、<br>空室対策も万全。</h4>
+				<p class="txt">
+					賃貸募集に対し、独自のネットワークを構築し、弊社が培ってきたノウハウで優良な入居者様をお探しすると共に
+					早期満室に向けて、オーナー様の賃貸不動産運用を全面的にバックアップ致します。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
-				<p class="ph"><img src="../img/service/job_img02.jpg" alt="品質確保・チェック"></p>
-				<h4 class="ttl f-yumincho">テキストテキスト</h4>
-				<p class="txt">テキストテキストテキストテキストテキストテキスト</p>
+				<p class="ph"><img src="../img/service/job_img02.jpg" alt="ポイント２"></p>
+				<h4 class="ttl f-yumincho">家賃管理業務を代行し、<br>安定した家賃収入を守ります。</h4>
+				<p class="txt">もしも家賃滞納が続く場合は、入居者へ督促、さらには債権回収業者に回収代行を依頼するなど、オーナーの収益維持に努めます。<br>家賃滞納が常習化しないよう、定期的に入金確認を行い、トラブル発生時は、司法書士や弁護士事務所への依頼対応も行っております。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
-				<p class="ph"><img src="../img/service/job_img03.jpg" alt="総合的なマネジメント"></p>
-				<h4 class="ttl f-yumincho">テキストテキスト</h4>
-				<p class="txt">テキストテキストテキストテキストテキストテキスト</p>
+				<p class="ph"><img src="../img/service/job_img03.jpg" alt="ポイント３"></p>
+				<h4 class="ttl f-yumincho">複雑な契約、更新管理なども<br>全てお任せください</h4>
+				<p class="txt">更新契約書の発送、申込時の勤務先等の変更の確認、火災保険、保証会社等の更新確認を行う他、契約更新や解除の際も、書面などの受け取り、退去後の修繕費用の請求も行っております。<br>トラブルを未然に防ぐためにも、有資格者のもと常に慎重に行っております。
+</p>
+			</li>
+		</ul>
+			</div>
+
+</div>
+
+<div class="service_construction" data-pararax01>
+	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/construction_img01.jpg"></div>
+	<div class="container1300">
+		<div class="box" data-pararax01-opacity02="0.2">
+			<div class="box_text">
+				<h2 class="txt">不動産建物管理<br><span class="f-playfair">Building Management</span></h2>
+					<p class="comment">私達は地域で多くの不動産建物管理を手がけて参りました。<br>
+培ったノウハウと、経験を集約しオーナー様にご満足いただけるサービスを実現し続けてきました。<br>
+オーナー様の大切な資産の高い資産価値を損なわないために、徹底した建物管理をご提供し、あらゆる視点からサポート致します。</p>
+			</div>
+		</div>
+		<ul class="listJob" data-pararax01>
+			<li class="item" data-pararax01-opacity05="0.0">
+				<p class="ph"><img src="../img/service/job_img01.jpg"></p>
+				<h4 class="ttl f-yumincho">幅広い管理サポートを実施し、<br>入居率アップを図ります。</h4>
+				<p class="txt">入居率の下落を抑えるためには、物件の管理・メンテナンスが欠かせません。<br>
+					お預かりする不動産を大切な資産と考え、長期的に物件価値を維持するため日常清掃や定期清掃業務を実地させていたいております</p>
+			</li>
+			<li class="item" data-pararax01-opacity05="0.2">
+				<p class="ph"><img src="../img/service/job_img02.jpg"></p>
+				<h4 class="ttl f-yumincho">建物のあらゆる修繕や<br>防災点検なども承ります。</h4>
+				<p class="txt">定期的に建物巡回を行い設備点検及び共用部、外周に問題がないかを確認いたします。<br>
+					大切な資産にもしもの事が無いよう防災機器の点検も念入りに行います。</p>
+
+			</li>
+			<li class="item" data-pararax01-opacity05="0.4">
+				<p class="ph"><img src="../img/service/job_img03.jpg"></p>
+				<h4 class="ttl f-yumincho">急なトラブルにも対応可能です。<br>お気軽にご連絡ください。</h4>
+				<p class="txt">入居者様のサポートはもちろんオーナー様が普段抱えている問題をを解消できるビジネスパートナーになります。<br>
+					経験豊富なスタッフが速やかにお客様へ対応させていただきます。</p>
+			</li>
+		</ul>
+			</div>
+
+</div>
+
+<div class="service_construction" data-pararax01>
+	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/construction_img01.jpg"></div>
+	<div class="container1300">
+		<div class="box" data-pararax01-opacity02="0.2">
+			<div class="box_text">
+				<h2 class="txt">メンテナンス／リフォーム<br><span class="f-playfair">maintenance／Remodeling</span></h2>
+				<p class="comment">建物・設備も人間同様に生きています。<br>
+														長い生涯には必ず健康を害することがあるように、不動産もまた太陽光や風雨にさらされて外壁や屋上などが痛んできます。<br>
+														当初の美しい環境を維持していくためにも修繕計画に基づいて適切な修繕工事を行なうことが大切です。<br>
+														弊社では、専門スタッフによる建物の老朽化対策や環境改善、入居率向上のための修繕計画のご提案と実地をご案内しております。</p>
+			</div>
+		</div>
+		<ul class="listJob" data-pararax01>
+			<li class="item" data-pararax01-opacity05="0.0">
+				<p class="ph"><img src="../img/service/job_img01.jpg"></p>
+				<h4 class="ttl f-yumincho">資産価値の維持、向上の為のご提案</h4>
+				<p class="txt">老朽化する不動産の価値を維持する方法は適確な時期に適切な修繕を施すことが最善の方法です。<br>
+												名古屋を知り尽くした弊社では、名古屋ならではの問題や向けての解決策や資産価値の向上に向けたご提案させていただきます。</p>
+			</li>
+			<li class="item" data-pararax01-opacity05="0.2">
+				<p class="ph"><img src="../img/service/job_img02.jpg"></p>
+				<h4 class="ttl f-yumincho">入居・退居にかかわるメンテナンス</h4>
+				<p class="txt">入居、退居などに伴いメンテナンスサービスをご提供しております。<br>
+												素早い対応と、丁寧なサービスは、お客様の満足度向上に繋がります。信頼の経験と実績でお客様の笑顔と満足をお約束いたします。</p>
+			</li>
+			<li class="item" data-pararax01-opacity05="0.4">
+				<p class="ph"><img src="../img/service/job_img03.jpg"></p>
+				<h4 class="ttl f-yumincho">入居率を向上させるためのご提案</h4>
+				<p class="txt">空室の不安を無くすために、弊社が市場のニーズを把握し、最新の情報や多様化する顧客ニーズをご提供させていただきます。<br>
+												その情報に基づき、お部屋のリフォームもお任せください。</p>
 			</li>
 		</ul>
 		<div class="technology" data-pararax01>
@@ -213,6 +293,7 @@
 	</div>
 
 </div>
+
 
 <div class="service_works" data-pararax01>
 	<div class="box_center" data-pararax01-opacity05="0.0">
