メタタグ修正

--- a/works/index.html
+++ b/works/index.html
@@ -13,10 +13,10 @@
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<meta name="description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。">
+<!-- <meta name="description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。"> -->
 <meta name="robots" content="">
-<meta property="og:title" content="施工実績 | 株式会社山田組">
-<meta property="og:description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。">
+<meta property="og:title" content="オーナー様へ | BONSproperty株式会社">
+<!-- <meta property="og:description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。"> -->
 <meta property="og:url" content="https://bonds-property.co.jp/">
 <meta property="og:image" content="common/img/og.png">
 <link href="../favicon.ico" rel="icon">
