オーナー様へページ型完成

--- a/works/index.html
+++ b/works/index.html
@@ -49,7 +49,7 @@
 			"position": 2,
 			"item": {
 				"@id": "https://www.yamada-gumi.co.jp../works/",
-				"name": "施工実績"
+				"name": "オーナ様へ"
 			}
 		}
 	]
@@ -62,7 +62,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
 <link rel="stylesheet" href="../common/css/common.css">
 <script src="../common/js/page_common.js"></script>
 </head>
@@ -103,6 +102,7 @@
 <main class="mod_main" role="main">
 
 <!--page title-->
+
 <div class="page_title works_title">
     <h2>オーナー様へ</h2>
     <p>To the owner</p>
@@ -111,7 +111,72 @@
 
 <!--works list-->
 <section class="works_wrap" data-pararax01>
+	<div class="service_construction" data-pararax01>
 
+		<div class="container1300">
+			<div class="box" data-pararax01-opacity02="0.2">
+				<div class="box_text">
+					<div class="box_text_container">
+					<h2 class="txt">家賃保証システム<br><span class="f-playfair">確かな安心を求める方向け</span></h2>
+						<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+						</div>
+					<p class="comment">家主様の建物（マンション・ビル）を借り上げて転貸するシステムです。<br>
+														入居者の有無や家賃の遅延・滞納時に関わることなく安定した家賃収入が保証されますので、長期返済の家主様にもご安心出来る
+													プランです<br>
+												また、日常の煩わしい賃貸管理・運営業務をすべて弊社が代行して行います。</p>
+				</div>
+				<div>
+					</div>
+	</div>
+	<div class="service_construction" data-pararax01>
+
+						<div class="container1300">
+							<div class="box" data-pararax01-opacity02="0.2">
+								<div class="box_text">
+									<div class="box_text_container">
+									<h2 class="txt">滞納保証システム<br><span class="f-playfair">安定した収入を求める方向け</span></h2>
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+										</div>
+										<p class="comment">家主様の代理として入居者募集・契約締結・入居後の賃貸管理運営など全ての業務を代行します。<br>
+																			借主の家賃滞納・遅延時でも当社が借主に代わり賃料を補償し早急に入金いたします。
+																			＊空室時の家賃は入金はございません。ご了承ください。</p>
+								</div>
+							</div>
+						</div>
+	</div>
+
+	<div class="service_construction" data-pararax01>
+						<div class="container1300">
+							<div class="box" data-pararax01-opacity02="0.2">
+								<div class="box_text">
+									<div class="box_text_container">
+										<h2 class="txt">集金代行システム<br><span class="f-playfair">手間を書けたくない方向け</span></h2>
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+									</div>
+										<p class="comment">借主の家賃滞納・遅延時には、早急に催促や集金を行うといったきめ細かい入金対応を致します。
+																			＊空室時・滞納時の家賃の入金はございません。ご了承ください。</p>
+								</div>
+							</div>
+						</div>
+			</div>
+	</div>
+	<div class="service_construction" data-pararax01>
+						<div class="container1300">
+							<div class="box" data-pararax01-opacity02="0.2">
+								<div class="box_text">
+									<div class="box_text_container">
+										<h2 class="txt">専任管理システム<br><span class="f-playfair">専門分野のみを任せたい方向け</span></h2>
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+									</div>
+									<p class="comment">家主様の方で直接入居者と賃貸借契約を結んでいただきます。<br>
+																		管理手数料は発生いたしません。入居後は契約更新・解約業務などの業務を代行致します<br>
+																	具体的には、家主様への借主解約のご連絡から退居時の立ち合い、原状回復工事の見積りなどの手続き、
+																そしてこれまで培ってきた弊社のノウハウを駆使した入居者募集をさせていただきます。</p>
+								</div>
+							</div>
+						</div>
+			</div>
+<!--
     <h3>
 		ALL	</h3>
 
@@ -244,24 +309,9 @@
 <li><a class='page-numbers' href='page/2/index.html'>2</a></li>
         </ul>
     </div>
-
+ -->
 </section>
 <!--/works list-->
-
-<!--category list-->
-<section class="category_wrap">
-	<div>
-        <h3>Category</h3>
-        <ul>
-                <li><a href="works_cat/river/index.html">河川</a></li>
-                <li><a href="works_cat/port/index.html">空港・港湾</a></li>
-                <li><a href="works_cat/road/index.html">道路</a></li>
-                <li><a href="works_cat/train/index.html">鉄道</a></li>
-                <li><a href="works_cat/other/index.html">その他</a></li>
-		</ul>
-	</div>
-</section>
-
 <!--パンくず-->
 <div class="breadcrumbArea">
     <ul>
@@ -269,7 +319,7 @@
             <a href="../index.html">TOPページ</a>
                     </li>
         <li>
-		    <p>施工実績</p>
+		    <p>オーナー様へ</p>
                     <li>
     </ul>
 </div><!-- /.mod_breadcrumblist -->
